# nde-khmer-toolkit

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
api/: Cargo.toml
api/src/: main.rs  openapi.rs
api/src/openapi/: info.rs  paths.rs  responses.rs  schemas.rs  servers.rs  swagger_ui.rs
crates/edge-tts-rs/: Cargo.toml
crates/edge-tts-rs/src/: edge_api.rs  util.rs
crates/kfa-cli/: Cargo.toml
crates/kfa-cli/src/: main.rs
crates/kfa-core/: Cargo.toml
crates/kfa-core/src/: alignment.rs  audio.rs  forced_alignment.rs  g2p.rs  lexicon.rs  lib.rs  phoneticize.rs  session.rs  text_normalize.rs  utils.rs  vocab.rs  vocabs.rs
crates/kfa-wasm/: Cargo.toml
crates/kfa-wasm/src/: lib.rs
crates/kfa-web/: Cargo.toml
crates/kfa-web/src/: lib.rs
crates/khmernormalizer/: Cargo.toml
crates/khmernormalizer/src/: khnormal.rs  lib.rs  mappings.rs
crates/number-verbalize/: Cargo.toml
crates/number-verbalize/src/: lib.rs
crates/transcribe-audio-to-text/: Cargo.toml
crates/transcribe-audio-to-text/src/: lib.rs  main.rs
data/: output_whisper.json
example-web/: netlify.toml  package.json  vercel.json
example-web/public/: kfa_wasm_bg.wasm
py/omnivoice-tts/: readme.md
web/example/: README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.js
web/example/api/: edge-tts.js
web/example/public/: transcribe_audio_to_text_bg.wasm
web/example/public/models/: README.md
web/example/public/wasm/: sosap_bg.wasm
web/example/src/: App.svelte
web/example/src/lib/: AudioTranscribe.svelte  LoadingScreen.svelte  OnboardingScreen.svelte  Phonetizer.svelte  TtsStudio.svelte
web/example/src/lib/audio-transcribe/: audio-processing.js  samples.js  srt.js
web/example/src/lib/wasm/: sosap.js
web/example/src/lib/wasm-kfa/: kfa_wasm.d.ts  kfa_wasm.js  kfa_wasm_bg.wasm.d.ts  package.json
web/example/src/lib/wasm-transcribe/: package.json  transcribe_audio_to_text.d.ts  transcribe_audio_to_text.js  transcribe_audio_to_text_bg.wasm.d.ts
