[workspace]
resolver = "2"
members = [
    "crates/khmernormalizer",
    "crates/number-verbalize",
    "crates/kfa-core",
    "crates/kfa-cli", "crates/transcribe-audio-to-text",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Sila Rim <51617383+rimsila@users.noreply.github.com>"]

[profile.release]
opt-level = 3
lto = true
