[package]
name = "kfa-cli"
description = "Khmer Forced Aligner - CLI"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kfa"
path = "src/main.rs"

[dependencies]
kfa-core = { path = "../kfa-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chardetng = "0.1"
encoding_rs = "0.8"
anyhow = "1"
hound = "3.5"
