[package]
name = "kfa-core"
description = "Khmer Forced Aligner - core library"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
khmernormalizer = { path = "../khmernormalizer" }
number-verbalize = { path = "../number-verbalize" }
khmercut = "0.1.5"
rustfst = "1.2.6"
crfs = "0.2.0"
ndarray = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
hound = "3.5"
anyhow = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "cuda", "api-17", "load-dynamic"] }
reqwest = { version = "0.12", features = ["blocking"] }
dirs = "5"
indicatif = "0.17"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
