[package]
name = "kfa-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
khmernormalizer = { path = "../khmernormalizer" }
number-verbalize = { path = "../number-verbalize" }
