[package]
name = "kfa-web"
description = "Khmer Forced Aligner — browser/WASM bindings with word-level alignment support"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
ndarray = "0.16"
khmernormalizer = { path = "../khmernormalizer" }
number-verbalize = { path = "../number-verbalize" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

# ── Future: real CTC alignment ──────────────────────────────────────────────
# Uncomment once an onnxruntime-web glue layer is in place (Option B) or a
# wasm32-compatible inference crate (e.g. candle / burn) is chosen:
#
# [target.'cfg(target_arch = "wasm32")'.dependencies]
# candle-core = { version = "0.x", features = ["wasm"] }
