[package]
name = "transcribe-audio-to-text"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
tempfile = "3.10"
clap = { version = "4", features = ["derive"] }
