[package]
name = "transcribe-audio-to-text"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# Expose as a cdylib for wasm-pack and as an rlib for native use
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ── Native-only ─────────────────────────────────────────────────────────────
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
tempfile = "3.10"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# ── WASM-only ────────────────────────────────────────────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-net = { version = "0.6", features = ["http"] }
